# encoded

./: Cargo.toml  LICENSE.md  README.md
src/: inner.rs  lib.rs
tests/: literal.rs  mod.rs
