[package]
name = "encoded"
version = "0.3.0"
edition = "2021"
authors = ["p4ken"]
description = "Macros converting character encodings which reduce runtime costs and binary size."
license = "MIT OR Apache-2.0"
keywords = ["encode","Shift_JIS", "windows-1251", "windows-1252", "ISO-8859"]
categories = ["Encoding", "localization", "text-processing"]

[lib]
proc-macro = true

[dependencies]
encoding_rs = "0.8.31"
litrs = "0.2.3"
