[package]
name = "encoded"
version = "0.4.0"
edition = "2021"
authors = ["p4ken"]
repository = "https://github.com/p4ken/encoded"
license = "MIT OR Apache-2.0"
description = "Macros converting character encodings which reduce runtime costs and binary size."
keywords = ["encode","Shift_JIS", "windows-1251", "windows-1252", "ISO-8859"]
categories = ["Encoding", "localization", "text-processing"]

[lib]
proc-macro = true

[dependencies]
encoding_rs = "0.8.31"
litrs = "0.2.3"
